--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.android.support:design:28.0.0'
     api 'com.android.support:recyclerview-v7:28.0.0'
+    api 'com.android.support:customtabs:28.0.0'
 
     api 'io.reactivex:rxjava:1.1.9'
     api 'io.reactivex:rxandroid:1.2.1'
