--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,23 +42,25 @@ android {
             jniLibs.srcDirs 'libnode/bin/'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.android.support:design:28.0.0'
     api 'com.android.support:recyclerview-v7:28.0.0'
     api 'com.android.support:customtabs:28.0.0'
-
     api 'io.reactivex:rxjava:1.1.9'
     api 'io.reactivex:rxandroid:1.2.1'
     api 'com.jakewharton:butterknife:8.4.0'
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     api 'com.google.code.gson:gson:2.8.5'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
     api 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
 
