--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:name=".MusicPlayerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/mp_app_name"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MP.Theme">
         <activity
@@ -29,7 +29,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.local.filesystem.FileSystemActivity"
-            android:label="@string/mp_activity_title_file_system"
+            android:label="@string/activity_title_file_system"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.details.PlayListDetailsActivity"
