Setup email login activity and layout Fixed button style Properly named some button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".ui.settings.WeiboLoginActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.settings.EmailLoginActivity"
+            android:screenOrientation="portrait" />
+
         <service android:name=".player.PlaybackService">
             <intent-filter>
                 <action android:name="io.github.ryanhoo.music.ACTION.PLAY_TOGGLE" />
